--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.htmlparser/htmlparser -->
+<!--    <dependency>-->
+<!--      <groupId>org.htmlparser</groupId>-->
+<!--      <artifactId>htmlparser</artifactId>-->
+<!--      <version>1.6</version>-->
+<!--    </dependency>-->
     <!--EasyPoi导入导出-->
     <dependency>
       <groupId>cn.afterturn</groupId>
